Repaired httpd-ssl.conf path

--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -208,8 +208,8 @@ DocumentRoot "/home/stud/ficm/WWW/HackMeIfYouCanBackEnd/"
     # It can be "All", "None", or any combination of the keywords:
     #   Options FileInfo AuthConfig Limit
     #
-    #AllowOverride None
-    AllowOverride All
+    AllowOverride None
+    #AllowOverride All
 
     #
     # Controls who can get stuff from this server.
@@ -466,6 +466,6 @@ DefaultType text/plain
 #Include etc/apache22/extra/httpd-default.conf
 
 # Secure (SSL/TLS) connections
-Include /home/stud/ficm/ochrona/apache/httpd-ssl.conf
+Include /home/stud/ficm/WWW/HackMeIfYouCanBackEnd/apache/httpd-ssl.conf
 
 #Include etc/apache22/Includes/*.conf
