Added working nginx conf with example python app

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,55 +1,79 @@
-# graphite.conf
-# www/py-graphite-web
-# niespodd,ficm,ato 2014
+# /home/stud/ficm/WWW/HMIUC/nginx.conf
+# ficm 2014
 
-server {
-	listen 9090;
+#user  nobody;
+worker_processes  1;
 
-	location / {
-		fastcgi_pass 127.0.0.1:10010;
-		fastcgi_param PATH_INFO $fastcgi_script_name;
-		fastcgi_param REQUEST_METHOD $request_method;
-		fastcgi_param QUERY_STRING $query_string;
-		fastcgi_param CONTENT_TYPE $content_type;
-		fastcgi_param CONTENT_LENGTH $content_length;
-	#2014/05/28 19:18:51 [error] 70055#0: *659 FastCGI sent in stderr: "WSGIServer: missing FastCGI param SERVER_NAME required by WSGI!
-	fastcgi_param SERVER_NAME $server_name;		# ??
-	#2014/05/28 19:23:58 [error] 7333#0: *892 FastCGI sent in stderr: "WSGIServer: missing FastCGI param SERVER_PORT required by WSGI!
-	fastcgi_param SERVER_PORT $server_port;		# ??
-	#2014/05/28 19:28:54 [error] 10382#0: *942 FastCGI sent in stderr: "WSGIServer: missing FastCGI param SERVER_PROTOCOL required by WSGI!"
-	fastcgi_param SERVER_PROTOCOL $server_protocol;
+error_log	/tmp/HMIUC/log/nginx-err  warn;		# debug | info | notice | warn | error
 
-		fastcgi_pass_header Authorization;
-		fastcgi_intercept_errors off;
-		#
-		add_header 'Access-Control-Allow-Origin'	'http://volt.iem.pw.edu.pl';
-		#add_header 'Access-Control-Allow-Origin'	'http://volt';
-		add_header 'Access-Control-Allow-Methods'	'GET, POST';
-		add_header 'Access-Control-Allow-Headers'	'Authorization, Content-Type';
-		add_header 'Access-Control-Allow-Credentials'	'true';
-				        
-		if ($request_method = 'OPTIONS' ) {
-			# if request method is options we immediately return with 200 OK.
-			return 200;
-		}
-								                
-		auth_pam                'Admin Zone';
-		# here comes the basic auth, after the options part
-		#auth_basic		'Restricted';
-		#auth_basic_user_file	'/var/tmp/grafana/.htpasswd';
+pid		/tmp/HMIUC/run/nginx.pid;
+
+events {
+	worker_connections  64;
+}
+
+
+http {
+#	include	  	  passenger;				# Wlaczenie passenger-a
+
+#	include       mime.types;
+	default_type  application/octet-stream;
+
+	#log_format  main  '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" '
+	#                  '"$http_user_agent" "$http_x_forwarded_for"';
+
+	sendfile        on;						# off for ZFS
+	#tcp_nopush     on;
+
+	#keepalive_timeout  0;
+	keepalive_timeout  65;
+
+	#gzip  on;
+
+	map $uri $preferred_proto {
+		default		"https";
+		#~^/(images|css|javascript)/ "none";
 	}
 
-	# static content links
-	location /content/ {		# content static graphite
-		alias /usr/local/share/graphite-web/content/;
-		autoindex on;
-	}
-	location /media/ {		#
-		alias /usr/local/lib/python2.7/site-packages/django/;
-		autoindex on;
-	}
-	location /static/ {		# django admin statis
-		alias /usr/local/lib/python2.7/site-packages/django/contrib/admin/static/;
-		autoindex on;
-	}
+
+	# another virtual host using mix of IP-, name-, and port-based configuration
+	#
+	#server {
+	#    listen       8000;
+	#    listen       somename:8080;
+	#    server_name  somename  alias  another.alias;
+
+	#    location / {
+	#        root   html;
+	#        index  index.html index.htm;
+	#    }
+	#}
+
+	# HTTPS server
+	#
+	#server {
+	#    listen       443 ssl;
+	#    server_name  localhost;
+
+	#    ssl_certificate      cert.pem;
+	#    ssl_certificate_key  cert.key;
+
+	#    ssl_session_cache    shared:SSL:1m;
+	#    ssl_session_timeout  5m;
+
+	#    ssl_ciphers  HIGH:!aNULL:!MD5;
+	#    ssl_prefer_server_ciphers  on;
+
+	#    location / {
+	#        root   html;
+	#        index  index.html index.htm;
+	#    }
+	#}
+
+#	if ($preferred_proto = "http")	{ return 301 http://$host:81$request_uri; }
+
+	include wsgi.conf;						# HTTPS
+	#include lok.conf;						# /lok
+
+	#include graphite.conf;					# graphite-web server on 9090
 }
